--- a/style.css
+++ b/style.css
@@ -14,18 +14,33 @@ body {
 
 h3 {
   margin: 0;
-  font-size: 1.5em;
+  font-size: 1.8em;
+  font-family: "Helvetica Neue", Comic Sans MS;
 }
 
 h5 {
   margin: 0;
-  font-size: 1.2em;
+  font-size: 1.0em;
   font-weight: normal;
 }
 
 h6 {
   margin: 0;
   font-size: 1.2em;
+  background: none;
+  color: #00000;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.0);
+}
+
+.intro-popup .leaflet-popup-content-wrapper {
+  background: 0;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.0);
+  position: inherit;
+  left: -400px;
+}
+
+.intro-popup .leaflet-popup-content {
+  min-width: 700px;
 }
 
 .intro-popup .leaflet-popup-tip-container {
@@ -53,10 +68,55 @@ form {
   margin-top: 2px;
 }
 
+.btn {
+  border: 1px;
+  background: none;
+  padding: 10px 20px;
+  font-size: 30px;
+  font-family: "Impact";
+  cursor: pointer;
+  margin: 10px;
+  transition: 0.8s;
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+}
+.btn:hover{
+ color: #fff;
+}
+.btn::before{
+ content: "";
+ position: absolute;
+ left: 0;
+ width: 100%;
+ height: 0%;
+ background: red;
+ z-index: -1;
+ transition: 0.4s;
+ top: 10;
+ border-radius: 20% 20% 40% 40%;
+}
+.btn:hover::before{
+ height: 70%;
+}
+
+#container {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  right: 3.5%;
+  top: 1%;
+  padding: 10px;
+  z-index: 400;
+  text-align: left;
+  right: 2.5%;
+  top: -2%;
+}
+
 .polygons-legend-scale {
   margin-top: 4px;
   padding-top: 7px;
-  border-top: dotted 3px #ffffff;
+  border-top: dotted 3px #eee;
 }
 
 .polygons-legend-scale i {
@@ -67,7 +127,7 @@ form {
 }
 
 .leaflet-popup-content {
-  min-width: 150px;
+  min-width: 100px;
 }
 
 .leaflet-popup-content img {
@@ -165,12 +225,12 @@ form {
   left: 10vw;
   width: 70vw;
   z-index: 1000;
-  background: black;
+  background: white;
   padding: 1vh 5vw;
   opacity: 0.9;
   border: 5px #ddd solid;
   border-radius: 5px;
-  font-family: "Helvetica Neue", Arial;
+  font-family: "Helvetica Neue", Impact;
 }
 
 #mobile-intro-popup p {
@@ -238,7 +298,7 @@ div.dataTables_scrollHead {
 }
 
 .dataTable * {
-  font-family: "Helvetica Neue", Arial;
+  font-family: "Helvetica Neue", el messiri;
   border: 0 !important;
 }
 
@@ -269,7 +329,7 @@ span.legend-arrow {
 }
 
 span.legend-icon {
-  color: #bbb;
+  color: #00000;
   margin-right: 5px;
 }
 
