--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@ body {
 }
 
 h3 {
+  padding: 5px;
   margin: 0;
-  font-size: 1.8em;
-  font-family: "Helvetica Neue", Comic Sans MS;
+  font-size: 3em;
+  font-family: impact;
 }
 
 h5 {
@@ -27,20 +28,21 @@ h5 {
 h6 {
   margin: 0;
   font-size: 1.2em;
-  background: none;
-  color: #00000;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.0);
+  background: black;
+  color: #ffffff;
+  box-shadow: 0 0px 70px 80px rgb(0 0 0);
 }
 
 .intro-popup .leaflet-popup-content-wrapper {
   background: 0;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.0);
+  box-shadow: 0 1px 5px rgb(0 0 0 / 0%);
   position: inherit;
-  left: -400px;
+  left: -700px;
+  top: -200px;
 }
 
 .intro-popup .leaflet-popup-content {
-  min-width: 700px;
+  min-width: 1400px;
 }
 
 .intro-popup .leaflet-popup-tip-container {
@@ -54,8 +56,8 @@ h6 {
 
 .leaflet-control-custom {
   padding: 6px 8px;
-  background: black;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.4);
+  background: #000000;
+  box-shadow: 0 1px 5px rgb(20 0 255 / 0%);
   color: #ffffff;
   border-radius: 5px;
 }
@@ -65,7 +67,7 @@ h6 {
 }
 
 form {
-  margin-top: 2px;
+  margin-top: px;
 }
 
 .btn {
@@ -90,11 +92,11 @@ form {
  left: 0;
  width: 100%;
  height: 0%;
- background: red;
+ background: #b00202;
  z-index: -1;
  transition: 0.4s;
  top: 10;
- border-radius: 20% 20% 40% 40%;
+ border-radius: 0% 0% 0% 0%;;
 }
 .btn:hover::before{
  height: 70%;
@@ -109,14 +111,14 @@ form {
   padding: 10px;
   z-index: 400;
   text-align: left;
-  right: 2.5%;
+  right: 0.5%;
   top: -2%;
 }
 
 .polygons-legend-scale {
   margin-top: 4px;
   padding-top: 7px;
-  border-top: dotted 3px #eee;
+  border-top: dotted 3px #0000;
 }
 
 .polygons-legend-scale i {
@@ -225,7 +227,7 @@ form {
   left: 10vw;
   width: 70vw;
   z-index: 1000;
-  background: white;
+  background: #ffffff00;
   padding: 1vh 5vw;
   opacity: 0.9;
   border: 5px #ddd solid;
@@ -246,7 +248,7 @@ form {
   right: 3px;
   width: 30px;
   background: #bbb;
-  color: white;
+  color: red;
   font-size: 1.4em;
   text-align: center;
   border-radius: 5px;
@@ -259,10 +261,10 @@ form {
 
 .polygon-label {
   position: absolute;
-  left: -15px;
-  color: #444;
+  left: 0;
+  color: #ff0000;
   font-weight: bold;
-  opacity: 0.9;
+  opacity: 1;
   pointer-events: none !important;
 }
 
@@ -274,18 +276,18 @@ form {
 }
 
 .markers-legend-icon {
-  height: 12px;
+  height: 0px;
   vertical-align: middle;
 }
 
 .map-title {
   margin-top: 0 !important;
-  margin-bottom: 10px;
-  max-width: 450px;
+  margin-bottom: px;
+  max-width: 154px;
 }
 
 .leaflet-top.leaflet-left {
-  padding-top: 10px;
+  padding-top: 5px;
 }
 
 /* Map Table */
@@ -303,7 +305,7 @@ div.dataTables_scrollHead {
 }
 
 div.dataTables_scrollHead table.display {
-  background-color: #444;
+  background-color: #000;
   color: #eee;
 }
 
@@ -322,21 +324,23 @@ select {
 }
 
 span.legend-arrow {
-  color: rgb(238, 238, 238);
+  color: rgb(255 255 255);
   position: absolute;
   right: 8px;
   top: 5px;
 }
 
 span.legend-icon {
-  color: #00000;
+  color: #ffffff;
   margin-right: 5px;
 }
 
 .ladder {
-  width: 180px;
+  width: 155px;
   margin-top: 0 !important;
   overflow: hidden;
+  background-color: #0a1047;
+  color: white;
 }
 
 .ladder h6.minimize ~ div,
@@ -344,7 +348,6 @@ span.legend-icon {
 .ladder h6.minimize ~ section {
   display: none !important;
 }
-
 .ladder form, .ladder div {
   display: block;
 }
